# handlers/auth.go
@@ -1,8 +1,10 @@
 package handlers
 
 import (
+	"context"
 	"net/http"
 
+	"cloud.google.com/go/auth/credentials/idtoken"
 	"github.com/gin-gonic/gin"
 
 	"CrosswordBackend/config"
@@ -101,5 +103,60 @@ func LoginUser(c *gin.Context){
 	c.JSON(http.StatusOK, gin.H{
         "token": token,
         "user":  userInDB,
+    })
+}
+
+// AuthWithGoogle godoc
+// @Summary Authenticate with Google
+// @Description Verifies Google token, auto-registers user if new, returns JWT
+// @Tags Auth
+// @Accept  json
+// @Produce  json
+// @Param token body map[string]string true "Google ID Token"
+// @Success 200 {object} map[string]interface{} "Authenticated successfully"
+// @Failure 400 {object} map[string]string "Invalid request format"
+// @Failure 401 {object} map[string]string "Invalid Google token"
+// @Router /auth/google [post]
+func AuthWithGoogle(c *gin.Context) {
+    var body struct {
+        Token string `json:"token" binding:"required"`
+    }
+    if err := c.ShouldBindJSON(&body); err != nil {
+        c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request format"})
+        return
+    }
+
+	payload, err := idtoken.Validate(context.Background(), body.Token, config.GoogleClientID)
+	if err != nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid Google token"})
+		return
+	}
+
+	email, _ := payload.Claims["email"].(string)
+	name, _ := payload.Claims["name"].(string)
+
+    var userInDB model.User
+	result := config.DB.Where("email = ?", email).FirstOrCreate(&userInDB, model.User{
+		Username: name, 
+		Score: 0, 
+		Email: email,
+	})
+	if result.Error != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Database error during registration"})
+		return
+	}
+
+	token, err := utils.GenerateJWT(userInDB.ID)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Token generation failed"})
+		return
+	}	
+	c.JSON(http.StatusOK, gin.H{
+        "token": token,
+        "user":  gin.H{
+			"email": userInDB.Email,
+            "username": userInDB.Username,
+            "score": userInDB.Score,
+		},
     })
 }
